--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ecocoins",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm" : "6.14.8",
+    "node" : "14.13.1"
+  },
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.4",
