--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm" : "6.14.8",
-    "node" : "14.13.1"
+    "npm": "6.14.8",
+    "node": "14.13.1"
   },
   "dependencies": {
     "@emotion/react": "^11.1.5",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
